# rb1-warehouse-automation

rb1_nav2_bringup/: CMakeLists.txt  package.xml
rb1_nav2_bringup/config/: amcl_config.yaml  amcl_config_real_robot.yaml  bt_navigator.yaml  bt_navigator_real_robot.yaml  controller.yaml  controller_real_robot.yaml  planner.yaml  planner_real_robot.yaml  recoveries.yaml  recoveries_real_robot.yaml  slam_toolbox.yaml  slam_toolbox_real_robot.yaml  startup_localization.xml
rb1_nav2_bringup/launch/: rb1_navigation.launch.py  rb1_slam.launch.py
rb1_nav2_bringup/maps/: .pgm  .yaml  warehouse_map.pgm  warehouse_map.yaml  warehouse_map_real_robot.pgm  warehouse_map_real_robot.yaml  warehouse_map_sim.yaml
rb1_nav2_bringup/rviz/: localization.rviz  localization_real_robot.rviz  mapping.rviz
rb1_nav2_bringup/scripts/: startup_localizer.py
rb1_nav2_bt_nodes/: CMakeLists.txt  package.xml
rb1_nav2_bt_nodes/include/rb1_nav2_bt_nodes/: adjust_to_pose_local.hpp  compute_pre_dock_pose.hpp  custom_back_up.hpp  custom_drive_on_heading.hpp  dock_to_shelf.hpp  dummy_mission_nodes.hpp  init_shelf_mission.hpp  patrol_types.hpp  patrol_until_candidate.hpp  place_shelf.hpp  refine_shelf_geometry.hpp  shelf_scan_utils.hpp  switch_nav2_mode.hpp  validate_shelf_candidate.hpp
rb1_nav2_bt_nodes/src/: adjust_to_pose_local.cpp  compute_pre_dock_pose.cpp  custom_back_up.cpp  custom_drive_on_heading.cpp  dock_to_shelf.cpp  dummy_mission_nodes.cpp  init_shelf_mission.cpp  patrol_until_candidate.cpp  place_shelf.cpp  refine_shelf_geometry.cpp  shelf_scan_utils.cpp  switch_nav2_mode.cpp  validate_shelf_candidate.cpp
rb1_shelf_mission/: CMakeLists.txt  package.xml
rb1_shelf_mission/config/: bt_nav_shelf.yaml  find_and_carry_shelf.xml  find_carry_shelf copy.xml  find_carry_shelf.xml  find_carry_shelf_real_robot.xml
rb1_shelf_mission/launch/: find_and_carry_shelf.launch.py
rb1_shelf_mission/src/: shelf_mission_executor.cpp
web_app/: index.html  main.js
web_app/scripts/: web_process_manager.py
